welness en fitenss

--- a/reis naar mars/home.html
+++ b/reis naar mars/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>home</title>
     <link rel="stylesheet" href="CSS/home.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             <a href="#">informatie</a>
             <div class="dropdown-menu">
                 <a href="informatie.html">informatie</a>
-                <a href="detais_ruimteschip.html">detais ruimteschip</a>
+                <a href="detais_ruimteschip.html">details ruimteschip</a>
                 <a href="Menu.html">menu</a>
                 <a href="wellness_fitnes.html">wellness en fitnessruimte</a>
                 <a href="VR-holodeck.html">VR-Holodeck</a>
