--- a/reis naar mars/wellness_fitnes.html
+++ b/reis naar mars/wellness_fitnes.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-           <li><a href="#">home</a></li>
+           <li><a href="home.html">home</a></li>
       
            <div class="dropdown">
             <a href="#">informatie</a>
