--- a/reis naar mars/VR-holodeck.html
+++ b/reis naar mars/VR-holodeck.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR-Holodeck</title>
-    <link rel="stylesheet" href="VR-Holodeck.css">
+    <link rel="stylesheet" href="CSS/VR-Holodeck.css">
 </head>
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-           <li><a href="#">home</a></li>
+           <li><a href="home.html">home</a></li>
       
            <div class="dropdown">
             <a href="#">informatie</a>
