--- a/reis naar mars/VR-holodeck.html
+++ b/reis naar mars/VR-holodeck.html
@@ -38,8 +38,8 @@
 
     <div class="container">
     <div class="fotos">
-        <img class="foto-1 foto" src="VR-Holodeck media/Foto's/Vector-1.png" alt="">
-        <img class="foto-2 foto" src="VR-Holodeck media/Foto's/Vector.png" alt="">  
+        <img class="foto-1 foto" src="img/VR-Holodeck media/Foto's/Vector-1.png" alt="">
+        <img class="foto-2 foto" src="img/VR-Holodeck media/Foto's/Vector.png" alt="">  
     </div>
     <h1 class="titel">Het VR-Holodeck op het ruimteschip: Innovatie en Avontuur in Virtuele Werelden</h1>
     <div class="tekst">
