--- a/reis naar mars/informatie.html
+++ b/reis naar mars/informatie.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>informatie over de reis</title>
+    <link rel="stylesheet" href="CSS/informatie.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <ul class="nav-links">
+           <li><a href="home.html">home</a></li>
+      
+           <div class="dropdown">
+            <a href="#">informatie</a>
+            <div class="dropdown-menu">
+                <a href="informatie.html">informatie</a>
+                <a href="detais_ruimteschip.html">detais ruimteschip</a>
+                <a href="Menu.html">menu</a>
+                <a href="wellness_fitnes.html">wellness en fitnessruimte</a>
+                <a href="VR-holodeck.html">VR-Holodeck</a>
+                <a href="webcamfeeds.html">webcamfeeds</a>
+            </div>
+         </div>
+ 
+         <div class="dropdown">
+            <a href="#">entertainment</a>
+            <div class="dropdown-menu">
+                <a href="bibliotheek.html">bibliotheek</a>
+                <a href="games.html">games</a>
+                <a href="films.html">films</a>
+                <a href="muziek.html">muziek</a>
+                <a href="e-boeken.html">e-boeken</a>
+            </div>
+          </div>
+        </ul>
+    </nav>
+<div class="informatie">
+    <h1>De Vlucht aan Boord van de "Red Horizon"</h1>
+
+    <p>Tijdens de vlucht worden de passagiers ondersteund door geavanceerde levensondersteunende systemen die <br>
+         zorgen voor een optimalelucht- en watervoorziening,evenals een aangename temperatuur.<br>
+          Een van de meest indrukwekkende kenmerken aan boord is de kunstmatige zwaartekracht, <br>
+          die zorgt voor een vertrouwde omgeving waarin het dagelijks leven voortgaat zoals op aarde. <br>
+          Van de eetkamers tot de slaapkamers, alles is ontworpen om de effecten van gewichtloosheid te neutraliseren,<br>
+         waardoor de reis comfortabel en moeiteloos aanvoelt.
+         <br><br>
+         Elke passagier verblijft in een luxe suite, compleet met panoramische ramen die een adembenemend<br>
+         uitzicht bieden op de eindeloze uitgestrektheid van de ruimte. Terwijl het schip door het universum vliegt,<br>
+         kunnen reizigers genieten van het geweldige uitzicht op sterrenstelsels,<br>
+         kometen en de ongerepte schoonheid van de ruimte, die nooit eerder zo dichtbij is geweest.<br> </p>
+
+         In de vrije tijd kunnen passagiers gebruik maken van de state-of-the-art recreatie- en ontspanningsfaciliteiten aan boord.<br>
+         Van een compleet uitgeruste fitnessruimte tot een wellnesscentrum, er is voor iedereen iets te beleven.<br>
+          Ook het culinaire aanbod is van wereldklasse, <br>
+          met dagelijks vers bereide maaltijden en een uitgebreide wijnkaart die bij iedere smaak past.<br>
+
+         Met de Red Horizon is de reis naar Mars niet alleen een technische prestatie, <br>
+         maar ook een reis van luxe en avontuur die je leven voorgoed zal veranderen.</p>
+
+</div>
+<img src="img/informatie/informatie_schip.jpg" alt="een foto van een ruimteschuttel" width="500" height="300" class="shuttle1">
+<img src="img/informatie/info_space_ship.png" alt="een foto van Red Horizon" width="500" height="300" class="shuttle2">
+
 </body>
 </html>
