--- a/reis naar mars/detais_ruimteschip.html
+++ b/reis naar mars/detais_ruimteschip.html
@@ -69,6 +69,6 @@
           Het interieur is ontworpen door topontwerpers en biedt alles van comfortabele <br>
           bedden tot kunstgalerijen en zelfs een zwembad met uitzicht op de sterren.</p>
     </div>
-    <img src="img/detais ruimteschip/ruimteschip.png" alt="foto van het ontwerp van het ruimteschip" class="schip">
+    <img src="img/detais ruimteschip/ruimteschip.png" alt="foto van het ontwerp van het ruimteschip" class="schip" width="800" height="700">
 </body>
 </html>
