--- a/reis naar mars/wellness_fitnes.html
+++ b/reis naar mars/wellness_fitnes.html
@@ -38,7 +38,7 @@
 
   <img src="img/fitness/fitness_1.png" alt="" width="450" height="400"">
   <img src="img/fitness/fitness_2.png" alt="">
-  <img src="img/fitness/fitness_3.png" alt="">
+  <img src="img/fitness/" alt="">
   <img src="img/fitness/welness_1.png" alt="">
   <img src="img/fitness/welness_2.png" alt="">
   <img src="img/fitness/welness_3.png" alt="">
