--- a/reis naar mars/Menu.html
+++ b/reis naar mars/Menu.html
@@ -14,14 +14,14 @@
             <a href="#">informatie</a>
             <div class="dropdown-menu">
                 <a href="informatie.html">informatie</a>
-                <a href="detais_ruimteschip.html">details ruimteschip</a>
+                <a href="detais_ruimteschip.html">detais ruimteschip</a>
                 <a href="Menu.html">menu</a>
                 <a href="wellness_fitnes.html">wellness en fitnessruimte</a>
                 <a href="VR-holodeck.html">VR-Holodeck</a>
                 <a href="webcamfeeds.html">webcamfeeds</a>
             </div>
          </div>
-
+ 
          <div class="dropdown">
             <a href="#">entertainment</a>
             <div class="dropdown-menu">
@@ -33,8 +33,9 @@
             </div>
           </div>
         </ul>
- </nav>
- <div class="tekst">
+    </nav>
+
+ <div c<div class="tekst">
     <h1>Het menu</h1>
     <p>
          Welkom aan boord The Red Horizon.
@@ -49,25 +50,69 @@
      <h3>Gemarineerde zalm carpaccio</h3>
      <h3>tomantensoep</h3>
      <h3>bruschetta</h3>
-    <img src="img/menu/voorgerecht_1.jpg" alt="voorgerecht garnalencocktail" width="300" height="200">
-    <img src="img/menu/voorgerecht_2.jpeg" alt="voorgerecht " width="300" height="200">
-    <img src="img/menu/voorgerecht_3.jpg" alt="voorgerecht tomantensoep" width="300" height="200">
-    <img src="img/menu/voorgerecht_4.jpg" alt="voorgerecht bruschetta" width="300" height="200">
-
+    <div class="image-container">
+        <img src="img/menu/voorgerecht_1.jpg" alt="voorgerecht garnalencocktail" width="300" height="200">
+        <div class="hidden-text">Garnalencocktail</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/voorgerecht_2.jpeg" alt="voorgerecht" width="300" height="200">
+        <div class="hidden-text">Gemarineerde zalm carpaccio
+        </div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/voorgerecht_3.jpg" alt="voorgerecht tomantensoep" width="300" height="200">
+        <div class="hidden-text">Tomantensoep</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/voorgerecht_4.jpg" alt="voorgerecht bruschetta" width="300" height="200">
+        <div class="hidden-text">Bruschetta</div>
+    </div>
 </div>
 <div class="hoofdgerecht">
-          <h1>hoofdgerecht</h1>
-          <h3>steak </h3>
-          <h3>spaghetti bolognese</h3>
-          <h3>ratatouille</h3>
-         <h3>thaise curry</h3>
-     <img src="img/menu/hoofdgercht-1.png" alt="steak" width="300" height="200">
-     <img src="img/menu/hoofdgerecht_2.jpg" alt="" width="300" height="200">
-     <img src="img/menu/hoofdgerecht_3.jpg" alt="" width="300" height="200">
-     <img src="img/menu/hoofdgerecht_4.jpg" alt="" width="300" height="200">
-    
-
+    <h1>hoofdgerecht</h1>
+    <h3>steak</h3>
+    <h3>spaghetti bolognese</h3>
+    <h3>ratatouille</h3>
+    <h3>thaise curry</h3>
+    <div class="image-container">
+        <img src="img/menu/hoofdgercht-1.png" alt="steak" width="300" height="200">
+        <div class="hidden-text"> Steak</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/hoofdgerecht_2.jpg" alt="hoofdgerecht" width="300" height="200">
+        <div class="hidden-text">Spahgetti bolognese</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/hoofdgerecht_3.jpg" alt="hoofdgerecht" width="300" height="200">
+        <div class="hidden-text">Ratatouille</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/hoofdgerecht_4.jpg" alt="hoofdgerecht" width="300" height="200">
+        <div class="hidden-text">Thaise curry</div>
+    </div>
 </div>
-
+<div class="toetjes">
+    <h1>toetjes</h1>
+    <h3>chocolade mousse</h3>
+    <h3>tiramisu</h3>
+    <h3>cheesecake</h3>
+    <h3>fruit salade</h3>
+    <div class="image-container">
+        <img src="img/menu/toetje_1.jpg" alt="chocolade mousse" width="300" height="200">
+        <div class="hidden-text">Chocolade mousse</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/toetje_2.jpg" alt="tiramisu" width="300" height="200">
+        <div class="hidden-text">Tiramisu</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/toetje_3.jpg" alt="cheesecake" width="300" height="200">
+        <div class="hidden-text">Cheesecake</div>
+    </div>
+    <div class="image-container">
+        <img src="img/menu/toetje_4.jpg" alt="fruit salade" width="300" height="200">
+        <div class="hidden-text">Fruit salade</div>
+    </div>
+</div>
 </body>
 </html>
