wellness en fitness pagina

--- a/reis naar mars/wellness_fitnes.html
+++ b/reis naar mars/wellness_fitnes.html
@@ -35,13 +35,49 @@
           </div>
         </ul>
 </nav>
+<div class="parent">
+  <div class="div1">  
+    <img src="img/fitness/fitness_1.png" alt="" width="400" height="250">
+    <img src="img/fitness/fitness_2.png" alt="" width="400" height="250">
+    <img src="img/fitness/fitness_4.jpg" alt="" width="450" height="250">
+    <img src="img/fitness/fitness_5.jpg" alt="" width="450" height="250">
+  </div>
+  <div class="div2"> 
+    <img src="img/fitness/welness_1.png" alt="" width="450" height="250">
+    <img src="img/fitness/welness_2.png" alt="" width="450" height="250">
+    <img src="img/fitness/welness_3.png" alt="" width="450" height="250">
+    <img src="img/fitness/welness_4.jpeg" alt="" width="450" height="250">
+ </div>
+  <div class="div3">  
+     <p>Voor iedereen is er een training op maat!
+       Fitness is een uitstekende manier om met je lijf bezig te zijn.
+       Of je nu je conditie of je contouren wil verbeteren. Door op een verantwoorde manier oefeningen uit te voeren, zal je merken dat je spieren sterker en je silhouet strakker wordt.
+       Bovendien krijg je een groter uithoudingsvermogen en een betere lichaamshouding, waardoor je minder kans op blessures loopt.
+     </p>
+    <p>"Onze gym is 7 dagen per week geopend, zodat je altijd kunt trainen op een moment dat jou uitkomt. Kom werken aan jouw gezondheid en kracht wanneer het jou uitkomt!<br>
 
-  <img src="img/fitness/fitness_1.png" alt="" width="450" height="400"">
-  <img src="img/fitness/fitness_2.png" alt="">
-  <img src="img/fitness/" alt="">
-  <img src="img/fitness/welness_1.png" alt="">
-  <img src="img/fitness/welness_2.png" alt="">
-  <img src="img/fitness/welness_3.png" alt="">
+      Openingstijden Gym:<br>
+      Maandag t/m vrijdag: 06:00 - 23:00<br>
+      Zaterdag & zondag: 08:00 - 20:00</p>
+  </div>
+  <div class="div4">
+    <p>Sauna- en wellnessfaciliteiten
+       Laat je spieren ontspannen in één van de vele sauna's.
+       Ontdek de Zoutsteensauna en Lavendelsauna. 
+       Ontspan in een van de baden of relax in de hottubs.
+       Laat je verrassen door alle faciliteiten die wij te bieden heeft en ga een dagje offline.</p>
+       <p>"Onze sauna is dagelijks geopend om je te verwelkomen in een oase van rust. Kom volledig tot ontspanning met onze diverse sauna’s en wellnessfaciliteiten!<br>
+
+        Openingstijden Sauna:<br>
+        Maandag t/m vrijdag: 10:00 - 22:00<br>
+        Zaterdag: 10:00 - 20:00<br>
+        Zondag: 10:00 - 18:00</p>
+  </div>
+</div>
+  
+
+
+ 
 
 </body>
 </html>
