--- a/reis naar mars/muziek.html
+++ b/reis naar mars/muziek.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactie Menu</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <title>muziek</title>
+    <script src="/reis naar mars/javascript/muziek.js"></script>
+    <link rel="stylesheet" href="/reis naar mars/CSS/muziek.css">
 </head>
 <body>
     <nav class="navbar">
@@ -49,22 +50,22 @@
                 <div class="content-grid">
                     <div class="content-item">
                         <a href="https://open.spotify.com/album/7aJuG4TFXa2hmE4z1yxc3n?si=754b3e4b719d48f6" target="_blank">
-                            <img src="album 1.jpeg" alt="Album 1">
+                            <img src="/reis naar mars/img/muziek/album 1.jpeg" alt="Album 1">
                         </a>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/album/0hvT3yIEysuuvkK73vgdcW?si=d748f8938c064121" target="_blank">
-                            <img src="album 2.jpeg" alt="Album 2">
+                            <img src="/reis naar mars/img/muziek/album 2.jpeg" alt="Album 2">
                         </a>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/album/3iPSVi54hsacKKl1xIR2eH?si=bdb1547989bd4625" target="_blank">
-                            <img src="album 3.jpeg" alt="Album 3">
+                            <img src="/reis naar mars/img/muziek/album 3.jpeg" alt="Album 3">
                         </a>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/album/4R6FV9NSzhPihHR0h4pI93?si=121709b25c564507" target="_blank">
-                            <img src="album 4.jpeg" alt="Album 4">
+                            <img src="/reis naar mars/img/muziek/album 4.jpeg" alt="Album 4">
                         </a>
                     </div>
                 </div>
@@ -75,22 +76,23 @@
                 <div class="content-grid">
                     <div class="content-item">
                         <a href="https://open.spotify.com/show/3DgfoleqaW61T2amZQKINx?si=7c03b889bdd14306" target="_blank">
-                            <img src="podcast 1.jpg" alt="Podcast 1">
+                            <img src="/reis naar mars/img/muziek/podcast 1.jpg
+                            " alt="Podcast 1">
                         </a>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/show/3IM0lmZxpFAY7CwMuv9H4g?si=186196f2efb74c14" target="_blank">
-                            <img src="podcast 2.jpg" alt="Podcast 2">
+                            <img src="/reis naar mars/img/muziek/podcast 2.jpg" alt="Podcast 2">
                         </a>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/show/3MGn724Y6BOSQzfmk3TyuY?si=57d44890c2464544" target="_blank">
-                            <img src="podcast 3.jpeg" alt="Podcast 3">
+                            <img src="/reis naar mars/img/muziek/podcast 3.jpeg" alt="Podcast 3">
                         </a>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/show/5L2ON33kXa2b7laBpCAgOI?si=f6029e9bcd9148f4" target="_blank">
-                            <img src="podcast 4.avif" alt="Podcast 4">
+                            <img src="/reis naar mars/img/muziek/podcast 4.avif" alt="Podcast 4">
                         </a>
                     </div>
                 </div>
@@ -101,19 +103,19 @@
                 <div class="content-grid">
                     <div class="content-item">
                         <a href="https://open.spotify.com/track/7ne4VBA60CxGM75vw0EYad?si=4be7ee59305d4692" target="_blank">
-                            <img src="top1.png" alt="Top 1">
+                            <img src="/reis naar mars/img/muziek/top1.png" alt="Top 1">
                         </a>
                         <p>That's so true - Gracie Abrams</p>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/track/2plbrEY59IikOBgBGLjaoe?si=40ce983fd97448be" target="_blank">
-                            <img src="top2.png" alt="Top 2">
+                            <img src="/reis naar mars/img/muziek/top2.png" alt="Top 2">
                         </a>
                         <p>Die with a smile - Lady Gaga, Bruno Mars</p>
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/track/45J4avUb9Ni0bnETYaYFVJ?si=c6b63f584c174922" target="_blank">
-                            <img src="album 2.jpeg" alt="Top 3">
+                            <img src="/reis naar mars/img/muziek/album 2.jpeg" alt="Top 3">
                         </a>
                         <p>luther - Kendrick Lamar, SZA</p>
                     </div>
