--- a/reis naar mars/webcamfeeds.html
+++ b/reis naar mars/webcamfeeds.html
@@ -37,15 +37,42 @@
     </nav>
 
     <div class="webcamfeeds">
-        <img id="foto1" src="img/webcamfeeds/70411976ace04ee48b4ccb9c2274ca1d 1.png" alt="">
-        <img id="foto2" src="img/webcamfeeds/blender_spaceship_scene 1.png" alt="">
-        <img id="foto3" src="img/webcamfeeds/holodeck_nasa 1.png" alt="">
-        <img id="foto4" src="img/webcamfeeds/images 1.png" alt="">
-        <img id="foto5" src="img/webcamfeeds/istockphoto-1056474276-612x612 1.png" alt="">
-        <img id="foto6" src="img/webcamfeeds/istockphoto-1344104129-612x612 1.png" alt="">
-        <img id="foto7" src="img/webcamfeeds/sdecoret170500516 1.png" alt="">
-        <img id="foto8" src="img/webcamfeeds/space-220-restaurant-epcot-disney-world-orlando-florida-264 1.png" alt="">
-        <img id="foto9" src="img/webcamfeeds/surveillance-command-center-stockcake 1.png" alt="">
+        <div class="image-container">
+            <img id="foto1" src="img/webcamfeeds/70411976ace04ee48b4ccb9c2274ca1d 1.png" alt="">
+            <div class="hidden-text">Gang naar controle deck</div>
+          </div>
+          <div class="image-container">
+            <img id="foto2" src="img/webcamfeeds/blender_spaceship_scene 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
+          <div class="image-container">
+            <img id="foto3" src="img/webcamfeeds/holodeck_nasa 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
+          <div class="image-container">
+            <img id="foto4" src="img/webcamfeeds/images 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
+          <div class="image-container">
+            <img id="foto5" src="img/webcamfeeds/istockphoto-1056474276-612x612 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
+          <div class="image-container">
+            <img id="foto6" src="img/webcamfeeds/istockphoto-1344104129-612x612 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
+          <div class="image-container">
+            <img id="foto7" src="img/webcamfeeds/sdecoret170500516 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
+          <div class="image-container">
+            <img id="foto8" src="img/webcamfeeds/space-220-restaurant-epcot-disney-world-orlando-florida-264 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
+          <div class="image-container">
+            <img id="foto9" src="img/webcamfeeds/surveillance-command-center-stockcake 1.png" alt="">
+            <div class="hidden-text">This is the hidden text!</div>
+          </div>
     </div>
 </body>
 </html>
