--- a/Mission2mars/Menu.html
+++ b/Mission2mars/Menu.html
@@ -53,7 +53,7 @@
     <div class="image-container">
         <img src="img/menu/voorgerecht_1.jpg" alt="voorgerecht garnalencocktail" width="300" height="200">
         <div class="hidden-text">Garnalencocktail</div>
-    </div>00
+    </div>
     <div class="image-container">
         <img src="img/menu/voorgerecht_2.jpeg" alt="voorgerecht" width="300" height="200">
         <div class="hidden-text">Gemarineerde zalm carpaccio
