--- a/Mission2mars/Menu.html
+++ b/Mission2mars/Menu.html
@@ -46,10 +46,6 @@
 </div>
 <div class="voorgerecht">
     <h1>voorgerecht</h1>
-     <h3>garnalencocktail</h3>
-     <h3>Gemarineerde zalm carpaccio</h3>
-     <h3>tomantensoep</h3>
-     <h3>bruschetta</h3>
     <div class="image-container">
         <img src="img/menu/voorgerecht_1.jpg" alt="voorgerecht garnalencocktail" width="300" height="200">
         <div class="hidden-text">Garnalencocktail</div>
@@ -70,10 +66,7 @@
 </div>
 <div class="hoofdgerecht">
     <h1>hoofdgerecht</h1>
-    <h3>steak</h3>
-    <h3>spaghetti bolognese</h3>
-    <h3>ratatouille</h3>
-    <h3>thaise curry</h3>
+
     <div class="image-container">
         <img src="img/menu/hoofdgercht-1.png" alt="steak" width="300" height="200">
         <div class="hidden-text"> Steak</div>
@@ -92,11 +85,8 @@
     </div>
 </div>
 <div class="toetjes">
-    <h1>toetjes</h1>
-    <h3>chocolade mousse</h3>
-    <h3>tiramisu</h3>
-    <h3>cheesecake</h3>
-    <h3>fruit salade</h3>
+    <h1>dessert</h1>
+ 
     <div class="image-container">
         <img src="img/menu/toetje_1.jpg" alt="chocolade mousse" width="300" height="200">
         <div class="hidden-text">Chocolade mousse</div>
