--- a/Mission2mars/webcamfeeds.html
+++ b/Mission2mars/webcamfeeds.html
@@ -16,7 +16,7 @@
             <div class="dropdown-menu">
                 <a href="informatie.html">informatie</a>
                 <a href="detais_ruimteschip.html">detais ruimteschip</a>
-                <a href="Menu.html">menu</a>
+                <a href="index.html">menu</a>
                 <a href="wellness_fitnes.html">wellness en fitnessruimte</a>
                 <a href="VR-holodeck.html">VR-Holodeck</a>
                 <a href="webcamfeeds.html">webcamfeeds</a>
