--- a/Mission2mars/Menu.html
+++ b/Mission2mars/Menu.html
@@ -8,7 +8,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-           <li><a href="home.html">home</a></li>
+           <li><a href="index.html">home</a></li>
       
            <div class="dropdown">
             <a href="#">informatie</a>
