--- a/Mission2mars/muziek.html
+++ b/Mission2mars/muziek.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="content-item">
                         <a href="https://open.spotify.com/show/3MGn724Y6BOSQzfmk3TyuY?si=57d44890c2464544" target="_blank">
-                            <img src="muziek/podcast 3.jpeg" alt="Podcast 3">
+                            <img src="img/muziek/podcast 3.jpeg" alt="Podcast 3">
                         </a>
                     </div>
                     <div class="content-item">
