--- a/Mission2mars/webcamfeeds.html
+++ b/Mission2mars/webcamfeeds.html
@@ -9,14 +9,14 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-           <li><a href="#">home</a></li>
+           <li><a href="index.html">home</a></li>
       
            <div class="dropdown">
             <a href="#">informatie</a>
             <div class="dropdown-menu">
                 <a href="informatie.html">informatie</a>
                 <a href="detais_ruimteschip.html">detais ruimteschip</a>
-                <a href="index.html">menu</a>
+                <a href="Menu.html">menu</a>
                 <a href="wellness_fitnes.html">wellness en fitnessruimte</a>
                 <a href="VR-holodeck.html">VR-Holodeck</a>
                 <a href="webcamfeeds.html">webcamfeeds</a>
