films pagina klaar

--- a/Mission2mars/films.html
+++ b/Mission2mars/films.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>films</title>
     <link rel="stylesheet" href="CSS/film.css ">
 </head>
 <body>
@@ -49,13 +49,16 @@
     </div>
 
     <div class="div4">
-     </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eG45kfCx34w" frameborder="0" allowfullscreen width="500" height="500"></iframe>
+    </div>
      
     <div class="div5">
+        <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113518099565184&bvid=BV1bjU1YzEE6&cid=26868712674&p=1"frameborder="0"  allowfullscreen width="500" height="500"></iframe>
     </div>
 
     <div class="div6"> 
-        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KZRQ0xqoc-s" frameborder="0" allowfullscreen width="500" height="500"></iframe>
+
     </div>
 
     <div class="div7"> 
