--- a/Mission2mars/games.html
+++ b/Mission2mars/games.html
@@ -33,12 +33,28 @@
         </ul>
     </nav>
 
-    <ul>
-        <li><a href="games/endless-runner-html5-game-master/index.html" target="_blank">Endless Runner</a></li>
-        <li><a href="games/html5-lightcycles-master/index.html" target="_blank">Lightcycles</a></li>
-        <li><a href="games/html5-snake-master/index.html" target="_blank">Snake</a></li>
-        <li><a href="games/tower_game-master/index.html" target="_blank">Tower Stack</a></li>
-      </ul>
+    <div class="container">
+        <h1 class="spel-titel">Games</h1>
+        <div class="spellen">
+        <div class="game-titel">
+            <a href="games/endless-runner-html5-game-master/index.html"><h2>Endless Runner</h2></a>
+            <h3>Ren oneindig door het vallei en ontwijk de obstakels! Kom zover mogelijk en zie je high score aan het eind!</h3>
+        </div>
+        <div class="game-titel">
+            <a href="games/html5-lightcycles-master/index.html"><h2>Lightcycles</h2></a>
+            <h3>Porbeer de tegenstander dood te maken door hem tegen jouw aan te botsen! Jouw sporen gaan niet weg dus pas op dat je niet tegen jezelf aan botst!</h3>
+        </div>
+        <div class="game-titel">
+            <a href="games/html5-snake-master/index.html"><h2>Snake</h2></a>
+            <h3>De originele snake spel! Eet punten om langer te worden! Word zo lang mogelijk en vul het spelbord compleet!</h3>
+        </div>
+        <div class="game-titel">
+            <a href="games/tower_game-master/index.html"><h2>Tower Stack</h2></a>
+            <h3>Stapel de blokkken zo lang mogelijk! hoe hoger je komt hoe meer punten je krijgt! Pas op dat je niet mis stapelt!</h3>
+        </div>
+        </div>
+    </div>
+
       <script src="javascript/service-worker.js"></script>
       <script>
         if ('serviceWorker' in navigator) {
