--- a/Mission2mars/webcamfeeds.html
+++ b/Mission2mars/webcamfeeds.html
@@ -62,35 +62,35 @@
           </div>
           <div class="image-container">
             <img id="foto2" src="img/webcamfeeds/blender_spaceship_scene 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">Gang</div>
           </div>
           <div class="image-container">
             <img id="foto3" src="img/webcamfeeds/holodeck_nasa 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">VR room</div>
           </div>
           <div class="image-container">
             <img id="foto4" src="img/webcamfeeds/images 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">fitnessruimte</div>
           </div>
           <div class="image-container">
             <img id="foto5" src="img/webcamfeeds/istockphoto-1056474276-612x612 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">Gang</div>
           </div>
           <div class="image-container">
             <img id="foto6" src="img/webcamfeeds/istockphoto-1344104129-612x612 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">Lobby</div>
           </div>
           <div class="image-container">
             <img id="foto7" src="img/webcamfeeds/sdecoret170500516 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">Controle kamer</div>
           </div>
           <div class="image-container">
             <img id="foto8" src="img/webcamfeeds/space-220-restaurant-epcot-disney-world-orlando-florida-264 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">restaurant</div>
           </div>
           <div class="image-container">
             <img id="foto9" src="img/webcamfeeds/surveillance-command-center-stockcake 1.png" alt="">
-            <div class="hidden-text">This is the hidden text!</div>
+            <div class="hidden-text">Secuirity</div>
           </div>
     </div>
 </body>
