paar dingen in games aangepast

--- a/Mission2mars/games.html
+++ b/Mission2mars/games.html
@@ -37,20 +37,20 @@
         <h1 class="spel-titel">Games</h1>
         <div class="spellen">
         <div class="game-titel">
-            <a href="games/endless-runner-html5-game-master/index.html"><h2>Endless Runner</h2></a>
+            <a class="images" href="games/endless-runner-html5-game-master/index.html"><img src="img/games/Endless-Runner.png" alt=""></a>
             <h3>Ren oneindig door het vallei en ontwijk de obstakels! Kom zover mogelijk en zie je high score aan het eind!</h3>
         </div>
         <div class="game-titel">
-            <a href="games/html5-lightcycles-master/index.html"><h2>Lightcycles</h2></a>
+            <a class="images" href="games/html5-lightcycles-master/index.html"><img src="img/games/Lightcycles.png" alt=""></a>
             <h3>Porbeer de tegenstander dood te maken door hem tegen jouw aan te botsen! Jouw sporen gaan niet weg dus pas op dat je niet tegen jezelf aan botst!</h3>
         </div>
         <div class="game-titel">
-            <a href="games/html5-snake-master/index.html"><h2>Snake</h2></a>
+            <a class="images" href="games/html5-snake-master/index.html"><img src="img/games/Snake.png" alt=""></a>
             <h3>De originele snake spel! Eet punten om langer te worden! Word zo lang mogelijk en vul het spelbord compleet!</h3>
         </div>
         <div class="game-titel">
-            <a href="games/tower_game-master/index.html"><h2>Tower Stack</h2></a>
-            <h3>Stapel de blokkken zo lang mogelijk! hoe hoger je komt hoe meer punten je krijgt! Pas op dat je niet mis stapelt!</h3>
+            <a class="images" href="games/tower_game-master/index.html"><img src="img/games/Tower-Stack.png" alt=""></a>
+            <h3>Stapel de blokken zo lang mogelijk! hoe hoger je komt hoe meer punten je krijgt! Pas op dat je niet mis stapelt!</h3>
         </div>
         </div>
     </div>
