--- a/Mission2mars/games.html
+++ b/Mission2mars/games.html
@@ -37,7 +37,7 @@
         <h1 class="spel-titel">Games</h1>
         <div class="spellen">
         <div class="game-titel">
-            <a class="images" href="games/endless-runner-html5-game-master/index.html"><img src="img/games/Endless-Runner.png" alt=""></a>
+            <a class="images" href="games/endless-runner-html5-game-master/index.html"><img src="img/games/Endless-Runner.png" width="500px" height="" alt=""></a>
             <h3>Ren oneindig door het vallei en ontwijk de obstakels! Kom zover mogelijk en zie je high score aan het eind!</h3>
         </div>
         <div class="game-titel">
